# retro-shooter-agents

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/agents/: asset-researcher.agent.md  developer.agent.md  pl.agent.md  tester.agent.md  ui-designer.agent.md
.github/workflows/: download-assets.yml  release.yml
docs/: qa-report-improvements.md  qa-report.md
game/: ARCHITECTURE.md  CMakeLists.txt
game/assets/: CREDITS.md  asset-history.json  asset-request.json
game/build_test/: CMakeCache.txt  GalaxyStorm  Makefile  cmake_install.cmake
game/src/: asset_manager.cpp  asset_manager.h  audio.cpp  audio.h  background.cpp  background.h  boss.cpp  boss.h  bullet.cpp  bullet.h  bullet_pattern.cpp  bullet_pattern.h  collision.cpp  collision.h  enemy.cpp  enemy.h  entity.h  game.cpp  game.h  hud.cpp  hud.h  main.cpp  menu.cpp  menu.h  particles.cpp  particles.h  player.cpp  player.h  powerup.cpp  powerup.h  sprites.cpp  sprites.h  stage.cpp  stage.h  types.h
